chore: use getFirst()/getLast() when possible